Fix contrast headings

--- a/css/estils.css
+++ b/css/estils.css
@@ -15,7 +15,7 @@ h2 {
 }
 
 h1, h2 {
-    color: cornflowerblue;
+    color: midnightblue;
 }
 
 /***********************/
